# qni-connector-ws-c

./: CMakeLists.txt  NOTICE.md
include/: CMakeLists.txt  qni-connector-ws.h
include/impls/: handshake-util.h
src/: CMakeLists.txt  qni-connector-ws.c
src/impls/: handshake-util.c
